- Remove unused imports. - Remove some old comments.